feat: list runs endpoint
